--- a/examples/example.css
+++ b/examples/example.css
@@ -9,6 +9,7 @@ body {
     margin: 5% auto 0px auto;
     border: 1px solid #2f353f;
     position: relative;
+    overflow: hidden;
 }
 
 .example-panel {
@@ -21,4 +22,29 @@ i.glyphicon {
     line-height: 42px;
 	text-align: center;
 	width: 100%;
+}
+
+#toggle-menu-button {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    cursor: pointer;
+    background-color: #ffffff;
+    color: #2f353f;
+}
+
+#toggle-menu-button:hover {
+    color: #ffffff;
+    background-color: #2f353f;
+}
+
+#main {
+}
+
+#main .nav {
+    outline: 1px solid rgba(0, 0, 0 , 0.08);
+    height: 50px;
+}
+
+#main .content {
 }
